# project-quiver

./: .cspell.config.yaml  .cspell.project-words.txt  .editorconfig-checker.json  .gitignore  .link-checker.config.json  README.md
src/: pyproject.toml  readme.md
src/manufacturing/: README.md
src/pcb/: README.md
src/printing/: README.md
src/quiver/: README.md  __init__.py  assembly.py  common.py
src/quiver/airframe_structure/: __init__.py  assembly.py
src/quiver/airframe_structure/beams/: __init__.py  assembly.py
src/quiver/airframe_structure/landing_gear/: __init__.py  assembly.py
src/quiver/airframe_structure/motor_arm/: __init__.py  assembly.py
src/quiver/airframe_structure/plates/: __init__.py  assembly.py
src/quiver/arms/: __init__.py  assembly.py
src/quiver/attachments/: Attachment_interface.step  __init__.py
src/quiver/attachments/designs/: __init__.py
src/quiver/attachments/interfaces/: __init__.py  assembly.py
src/quiver/electronics/: __init__.py  assembly.py
src/quiver/enclosure/: __init__.py  assembly.py
src/quiver/equipment/: __init__.py  assembly.py
src/quiver/equipment/battery/: __init__.py  assembly.py
src/quiver/equipment/pcb/: __init__.py  assembly.py
src/quiver/equipment/peripheral/: __init__.py  assembly.py
src/quiver/equipment/propulsion/: __init__.py  assembly.py
src/quiver/frame/: __init__.py  assembly.py
src/quiver/harness/: __init__.py  assembly.py
src/quiver/landing_gear/: __init__.py  assembly.py
src/quiver/supporting_structure/: __init__.py  assembly.py
src/quiver/variants/: __init__.py
(+221 files in other folders)
