[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "quiver-cad"
version = "0.1.0"
description = "Open-source CAD assembly for the Arrow Quiver drone platform"
requires-python = ">=3.10"
dependencies = [
    "build123d>=0.7",
]

[project.optional-dependencies]
dev = [
    "ocp-vscode>=2.0",
]

[tool.setuptools.packages.find]
include = ["quiver*"]
